--- a/templates/admin/country/country.html.twig
+++ b/templates/admin/country/country.html.twig
@@ -1,39 +1,34 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
-    <div class="bradcam_area bradcam_bg_3">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>Administration - {{ country.name }} et ses villes</h3>
-                    </div>
+    {% embed 'admin/base.html.twig' %}
+        {% block secondTitle %}
+            Admin - {{ country.name }} et ses villes
+        {% endblock %}
+        {% block bodyAdmin %}
+            <div class="container-fluid row p-2" style="background-color: #cddcdf; box-sizing: unset;">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10 text-center"><br><br>
+                    <a href="{{ url('admin_country_add_city', {id: country.id }) }}" class="genric-btn primary text-center">Ajouter une ville</a><br><br>
+                    <table class="table table-dark">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Ville</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for city in country.cities %}
+                            <tr>
+                                <th scope="row">{{ city.id }}</th>
+                                <td>{{ city.name }}</td>
+                                <td><a href="{{ url('admin_country_delete_city', {id: city.id}) }}" class="text-danger"><i class="fas fa-trash-alt" title="Supprimer"></i></a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <br><br>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="container-fluid row p-2" style="background-color: #cddcdf; box-sizing: unset;">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-10 text-center"><br><br>
-            <a href="{{ url('admin_country_add_city', {id: country.id }) }}" class="genric-btn primary text-center">Ajouter une ville</a><br><br>
-            <table class="table table-dark">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Ville</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for city in country.cities %}
-                    <tr>
-                        <th scope="row">{{ city.id }}</th>
-                        <td>{{ city.name }}</td>
-                        <td><a href="{{ url('admin_country_delete_city', {id: city.id}) }}" class="text-danger"><i class="fas fa-trash-alt" title="Supprimer"></i></a></td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <br><br>
-        </div>
-    </div>
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
