--- a/templates/admin/country/index.html.twig
+++ b/templates/admin/country/index.html.twig
@@ -1,40 +1,34 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
-    <div class="bradcam_area bradcam_bg_3">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>Administration - Pays et villes</h3>
-                    </div>
+    {% embed 'admin/base.html.twig' %}
+        {% block secondTitle %}
+            Admin - Pays et villes
+        {% endblock %}
+        {% block bodyAdmin %}
+            <div class="container-fluid row p-2" style="background-color: #cddcdf; box-sizing: unset;">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10 text-center"><br><br>
+                    <a href="{{ url('admin_country_create') }}" class="genric-btn primary text-center">Ajouter un pays</a><br><br>
+                    <table class="table table-dark">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Pays</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for country in countrys %}
+                            <tr>
+                                <th scope="row">{{ country.id }}</th>
+                                <td><a class="text-white" href="{{ url('admin_country', {id: country.id}) }}">{{ country.name }}</a></td>
+                                <td><a href="{{ url('admin_country_delete', {id: country.id}) }}" class="text-danger"><i class="fas fa-trash-alt" title="Supprimer"></i></a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <br><br>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="container-fluid row p-2" style="background-color: #cddcdf; box-sizing: unset;">
-
-        <div class="col-lg-1"></div>
-        <div class="col-lg-10 text-center"><br><br>
-            <a href="{{ url('admin_country_create') }}" class="genric-btn primary text-center">Ajouter un pays</a><br><br>
-            <table class="table table-dark">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Pays</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for country in countrys %}
-                    <tr>
-                        <th scope="row">{{ country.id }}</th>
-                        <td><a class="text-white" href="{{ url('admin_country', {id: country.id}) }}">{{ country.name }}</a></td>
-                        <td><a href="{{ url('admin_country_delete', {id: country.id}) }}" class="text-danger"><i class="fas fa-trash-alt" title="Supprimer"></i></a></td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <br><br>
-        </div>
-    </div>
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
