--- a/templates/admin/doctors.html.twig
+++ b/templates/admin/doctors.html.twig
@@ -1,51 +1,51 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
-    <div class="bradcam_area bradcam_bg_3">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>Administration - Les médecins</h3>
-                    </div>
+    {% embed 'admin/base.html.twig' %}
+        {% block secondTitle %}
+            Admin - Les médecins
+        {% endblock %}
+        {% block bodyAdmin %}
+            <div class="container-fluid row p-2" style="background-color: #ffffff; box-sizing: unset;">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10 text-center"><br><br>
+                    <table class="table table-dark">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nom et prénom</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Tel</th>
+                            <th scope="col">Type de docteur</th>
+                            <th scope="col">Matricule</th>
+                            <th scope="col">Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for user in docs %}
+                            <tr>
+                                <th scope="row">{{ user.id }}</th>
+                                <td>{{ user.username }}</td>
+                                <td><a style="color: white" href="mailto:{{ user.email }}">{{ user.email }}</a></td>
+                                <td><a style="color: white" href="telto:{{ user.phone_number }}">{{ user.phone_number }}</a></td>
+                                <td>
+                                    {% for type in user.type_doctor %}
+                                        {{ type.name }} &nbsp; &nbsp;
+                                    {% endfor %}
+                                </td>
+                                <td>{{ user.matriculeDoctor }}</td>
+                                <td>
+                                    {#                            <a href="{{ url('admin_edit_doctor', {id: user.id}) }}" class="text-info">Modifier</a> | #}
+                                    <a class="text-danger" href="{{ url('admin_delete_user', {id: user.id}) }}">Supprimer</a><br>
+                                    <a class="text-primary" title="ça fonctionne pas encore" href="#">Activer</a>
+                                    <a class="text-info" href="#">Les prestations</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <br><br>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="container-fluid row p-2" style="background-color: #cddcdf; box-sizing: unset;">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-10 text-center"><br><br>
-            <table class="table table-dark">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nom et prénom</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Tel</th>
-                    <th scope="col">Type de docteur</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for user in docs %}
-                    <tr>
-                        <th scope="row">{{ user.id }}</th>
-                        <td>{{ user.username }}</td>
-                        <td><a style="color: white" href="mailto:{{ user.email }}">{{ user.email }}</a></td>
-                        <td><a style="color: white" href="telto:{{ user.phone_number }}">{{ user.phone_number }}</a></td>
-                        <td>
-                            {% for type in user.type_doctor %}
-                                {{ type.name }} &nbsp; &nbsp;
-                            {% endfor %}
-                        </td>
-                        <td>
-{#                            <a href="{{ url('admin_edit_doctor', {id: user.id}) }}" class="text-info">Modifier</a> | #}
-                            <a class="text-danger" href="{{ url('admin_delete_user', {id: user.id}) }}">Supprimer</a></td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <br><br>
-        </div>
-    </div>
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
