--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,26 +1,11 @@
-{% extends 'base.html.twig' %}
+    {% extends 'base.html.twig' %}
+    {% block body %}
+        {% embed 'admin/base.html.twig' %}
+            {% block secondTitle %}
+                Admin
+            {% endblock %}
+            {% block bodyAdmin %}
 
-{% block body %}
-    <div class="bradcam_area bradcam_bg_3">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>Administration</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid row p-5">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 text-center">
-            <a href="{{ url('admin_users') }}">Les utilisateurs</a><br>
-            <a href="{{ url('admin_doctors') }}">Les médecins</a> <br>
-            <a href="{{ url('admin_type_doctor') }}">Type de médecins</a><br>
-            <a href="{{ url('admin_rendez_vous') }}">Les rendez-vous</a> <br>
-            <a href="{{ url('admin_reserver_rendez_vous') }}">Réserver un rendez-vous</a> <br>
-            <a href="{{ url('admin_countrys') }}">Pays et ville</a>
-        </div>
-    </div>
-{% endblock %}
+            {% endblock %}
+        {% endembed %}
+    {% endblock %}
