--- a/templates/admin/rendez_vous.html.twig
+++ b/templates/admin/rendez_vous.html.twig
@@ -1,45 +1,39 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
-    <div class="bradcam_area bradcam_bg_3">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>Administration - Les rendez-vous</h3>
-                    </div>
+    {% embed 'admin/base.html.twig' %}
+        {% block secondTitle %}
+            Admin - Rendez-vous
+        {% endblock %}
+        {% block bodyAdmin %}
+            <div class="container-fluid row p-5">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10 text-center">
+                    <table class="table table-dark">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Docteur</th>
+                            <th scope="col">Patient</th>
+                            <th scope="col">Acheteur</th>
+                            <th scope="col">Prix de la prestation</th>
+{#                            <th scope="col">État</th>#}
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for appoint in appointments %}
+                            <tr>
+                                <th scope="row">{{ appoint.id }}</th>
+                                <td>{{ appoint.doctor.username }}</td>
+                                <td>{{ appoint.namePatient }}</td>
+                                <td>{{ appoint.buyer.username }}</td>
+                                <td>{{ appoint.prestation.price }}€</td>
+{#                                <td>{{ appoint.state }}</td>#}
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="container-fluid row p-5">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-10 text-center">
-            <table class="table table-dark">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Docteur</th>
-                    <th scope="col">Patient</th>
-                    <th scope="col">Acheteur</th>
-                    <th scope="col">Prix de la prestation</th>
-                    <th scope="col">État</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for appoint in appointments %}
-                    <tr>
-                        <th scope="row">{{ appoint.id }}</th>
-                        <td>{{ appoint.doctor.username }}</td>
-{#                        <td>{{ appoint.patient.username }}</td>#}
-                        <td>Faris Dièse</td>
-                        <td>{{ appoint.buyer.username }}</td>
-                        <td>{{ appoint.prestation.price }}</td>
-                        <td>{{ appoint.state }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
