--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -1,44 +1,38 @@
 {% extends 'base.html.twig' %}
-
 {% block body %}
-    <div class="bradcam_area bradcam_bg_3">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text">
-                        <h3>Administration - Les utilisateurs</h3>
-                    </div>
+    {% embed 'admin/base.html.twig' %}
+        {% block secondTitle %}
+            Admin - Utilisateurs
+        {% endblock %}
+        {% block bodyAdmin %}
+            <div class="container-fluid row p-2" style="background-color: #ffffff; box-sizing: unset;">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center"><br><br>
+                    <table class="table table-dark">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nom et prénom</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Tel</th>
+                            <th scope="col">Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for user in users %}
+                            <tr>
+                                <th scope="row">{{ user.id }}</th>
+                                <td>{{ user.username }}</td>
+                                <td><a style="color: white" href="mailto:{{ user.email }}">{{ user.email }}</a></td>
+                                <td><a style="color: white" href="telto:{{ user.phone_number }}">{{ user.phone_number }}</a></td>
+                                <td><a class="text-danger" href="{{ url('admin_delete_user', {id: user.id}) }}">Supprimer</a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <br><br>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="container-fluid row p-2" style="background-color: #cddcdf; box-sizing: unset;">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 text-center"><br><br>
-            <table class="table table-dark">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nom et prénom</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Tel</th>
-                    <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for user in users %}
-                    <tr>
-                        <th scope="row">{{ user.id }}</th>
-                        <td>{{ user.username }}</td>
-                        <td><a style="color: white" href="mailto:{{ user.email }}">{{ user.email }}</a></td>
-                        <td><a style="color: white" href="telto:{{ user.phone_number }}">{{ user.phone_number }}</a></td>
-                        <td><a class="text-danger" href="{{ url('admin_delete_user', {id: user.id}) }}">Supprimer</a></td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <br><br>
-        </div>
-    </div>
-
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
