--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -81,4 +81,160 @@
             </div>
         </div>
     </div>
+    {# End Banner Part #}
+
+    {# Comment ça marche ? #}
+    <div class="works_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section_title text-center mb-90">
+                        <span class="wow lightSpeedIn" data-wow-duration="1s" data-wow-delay=".1s"></span>
+                        <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">Comment ça marche ?</h3>
+                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">Réserver un rendez-vous pour vos proches au pays</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="single_works wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
+                        <span>
+                            01
+                        </span>
+                        <h3>Recherchez un médecin</h3>
+                        <p>Le bon médecin pour le bon patient.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="single_works wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                        <span>
+                            02
+                        </span>
+                        <h3>Réserver un rendez-vous</h3>
+                        <p>Entrez les coordonnées de votre proche, il n'aura qu'à se présenter chez le médecin.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="single_works wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                        <span>
+                            03
+                        </span>
+                        <h3>Soyez serein</h3>
+                        <p>Vous savez où va votre argent, et vos proches sont en bonne santé.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {# End Comment ça marche #}
+
+    <!-- Bénéfices  -->
+    <div class="service_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section_title text-center mb-90">
+                        <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s"></span>
+                        <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">Avantages</h3>
+                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">-</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".5s">
+                        <div class="service_icon_wrap text-center">
+                            <div class="service_icon ">
+                                <img src="{{ '/build/images/svg_icon/service_1.png' }}" alt="">
+                            </div>
+                        </div>
+                        <div class="info text-center">
+                            <span>-</span>
+                            <h3>-</h3>
+                        </div>
+                        <div class="service_content">
+                            <ul>
+                                <li>-</li>
+                                <li>-</li>
+                                <li>-</li>
+                                <li>-</li>
+                            </ul>
+                            <div class="apply_btn">
+                                <button class="boxed-btn3" type="submit">Trouver un médecin</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                        <div class="service_icon_wrap text-center">
+                            <div class="service_icon ">
+                                <img src="{{ '/build/images/svg_icon/service_2.png' }}" alt="">
+                            </div>
+                        </div>
+                        <div class="info text-center">
+                            <span>Prenez soin de vos proches</span>
+                            <h3>-</h3>
+                        </div>
+                        <div class="service_content">
+                            <ul>
+                                <li>-</li>
+                                <li>-</li>
+                                <li>-</li>
+                                <li>-</li>
+                            </ul>
+                            <div class="apply_btn">
+                                <button class="boxed-btn3" type="submit">Trouver un médecin</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service wow fadeInRight" data-wow-duration="1.2s" data-wow-delay=".5s">
+                        <div class="service_icon_wrap text-center">
+                            <div class="service_icon ">
+                                <img src="{{ '/build/images/svg_icon/service_3.png' }}" alt="">
+                            </div>
+                        </div>
+                        <div class="info text-center">
+                            <span>Paiement sécurisé</span>
+                            <h3>-</h3>
+                        </div>
+                        <div class="service_content">
+                            <ul>
+                                <li>-</li>
+                                <li>-</li>
+                                <li>-</li>
+                                <li>-</li>
+                            </ul>
+                            <div class="apply_btn">
+                                <button class="boxed-btn3" type="submit">Trouver un médecin</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Bénéfices  -->
+
+
+    {# Banner avant footer #}
+    <div class="apply_loan overlay">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-8 col-md-7">
+                    <div class="loan_text wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">
+                        <h3>Demander un don pour être soigné</h3>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-5">
+                    <div class="loan_btn wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".4s">
+                        <a class="boxed-btn3" href="#">Demander un don</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {# END Banner avant footer#}
 {% endblock %}
