--- a/templates/search_doctor/index.html.twig
+++ b/templates/search_doctor/index.html.twig
@@ -37,7 +37,8 @@
                             </select>
                             <script>
                                 $(".js-example-tags").select2({
-                                    tags: true
+                                    tags: true,
+                                    placeholder: "Type de médecin"
                                 });
                             </script>
                         </div>
