--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -32,7 +32,8 @@
                                             </select>
                                             <script>
                                                 $(".js-example-tags").select2({
-                                                    tags: true
+                                                    tags: true,
+                                                    placeholder: "Type de médecin"
                                                 });
                                             </script>
                                         </div>
