--- a/templates/appointment/reserver_payer.html.twig
+++ b/templates/appointment/reserver_payer.html.twig
@@ -5,6 +5,10 @@
 {% block body %}
     <script src="https://js.stripe.com/v3/"></script>
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"></script>
+
+
     <div class="bradcam_area bradcam_bg_3">
         <div class="container">
             <div class="row">
