--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,8 @@
                                                         <li><a href="{{ url('fos_user_security_login') }}">Connexion</a></li>
                                                     {% endif %}
                                                     <li><a href="{{ url('search_doctor') }}">Trouver un médecin</a></li>
+                                                    <li><a href="{{ url('demander_un_don') }}">Demander un don</a></li>
+                                                    <li><a href="{{ url('search_doctor') }}">Offrir un soin</a></li>
 {#                                                    <li><a href="#">blog <i class="ti-angle-down"></i></a>#}
 {#                                                        <ul class="submenu">#}
 {#                                                            <li><a href="#">blog</a></li>#}
