working on donation requests

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
                                         <div class="main-menu  d-none d-lg-block">
                                             <nav>
                                                 <ul id="navigation">
-                                                    <li><a href="{{ url('homepage') }}">Accueil</a></li>
+{#                                                    <li><a href="{{ url('homepage') }}">Accueil</a></li>#}
 {#                                                    <li><a href="{{ url('register_doctor') }}">Je suis médecin</a></li>#}
                                                     {% if app.user.id is defined %}
                                                     <li><a href="{{ url('fos_user_profile_show') }}">Mes informations <i class="ti-angle-down"></i></a>
