--- a/templates/donation_request/index.html.twig
+++ b/templates/donation_request/index.html.twig
@@ -30,7 +30,7 @@
                                         On vous demandera avec quel médecin et quelle consultation vous souhaitez demander un don.</p>
                                     </div>
                                 </div>
-                                {{ form_start(form) }}
+                                {{ form_start(form, {'attr': {'class': 'col-sm-12'}}) }}
 
                                 <div class="col-md-12">
                                     <div class="single_field">
