--- a/templates/donation_request/choisir-medecin.html.twig
+++ b/templates/donation_request/choisir-medecin.html.twig
@@ -96,14 +96,28 @@
                             <b>Description : </b><p class="text-center">{{ doctor.desc }}</p><br>
                             <b>Diplômes : </b><p class="text-center">{{ doctor.diploma }}</p><br>
                             <p>Consultation à partir de {{ doctor.lowerPrice }}€</p><br>
-                            <p style="text-align: center">
-                                <a href="{{ url('doctor_profile', {id: doctor.id}) }}" class="btn btn-success">Voir plus</a>
-                            </p>
                         </div>
                         <div class="col-sm-6" style="padding: 0 !important;">
                             <img src="{{ asset('uploads/pictures/' ~ doctor.picture) }}" height="auto" width="100%" alt="Photo de {{ doctor.username }}">
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-5 col-md-5 col-sm-10" style="background-color: #ffffff; border: solid 1px #d4dde8; border-radius: 5px; margin-left: 4%; margin-right: 4%; margin-bottom: 2%">
+                    <h3 class="text-center" style="padding-top: 2%;">Consultations avec  {{ doctor.username }}</h3><br>
+                    {% for prestation in doctor.prestations %}
+                        <div class="row" style="padding-bottom: 5px; text-align: left;">
+                            <div class="col-lg-3"><b>{{ prestation.price }} €</b></div>
+                            <div class="col-lg-6 text-center">
+                                <b>{{ prestation.name }}</b>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">{{ prestation.description }}</div>
+                        </div><br>
+                        <p class="text-center">
+                            <a href="{{ url('demander_don_choix_prestation', {idDoctor: doctor.id, idPrestation: prestation.id, idDonationRequest: donationRequest.id}) }}" class="btn btn-success">Choisir cette consultation</a>
+                        </p><br>
+                    {% endfor %}
                 </div>
             {% endfor %}
         {% else %}
