--- a/templates/donation_request/recapitulatif.html.twig
+++ b/templates/donation_request/recapitulatif.html.twig
@@ -15,6 +15,78 @@
         </div>
     </div>
 
+    <br><br>
+    <div class="container-fluid row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
+            <h2 class="text-center">
+                {% if donationRequest.state == constant('App\\Entity\\DonationRequest::STATE_CREATED') %}
+                    Vous n'avez pas encore choisi la consultation voulue !
+                {% elseif donationRequest.state == constant('App\\Entity\\DonationRequest::STATE_COMPLETE') %}
+                    En attente de validation par l'équipe Afromed
+                {% elseif donationRequest.state == constant('App\\Entity\\DonationRequest::STATE_VALID') %}
+                    La demande a été validée, en attente d'un généreux donateur
+                {% elseif donationRequest.state == constant('App\\Entity\\DonationRequest::STATE_END') %}
+                    Le soin a bien été offert
+                {% endif %}
+            </h2>
+            <br>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="col-md-12">
+                        <b>Nom</b> : <span>{{ donationRequest.name }}</span>
+                    </div>
+                    <div class="col-md-12">
+                        <b>Adresse</b> : <span>{{ donationRequest.address }}</span>
+                    </div>
+                    <div class="col-md-12">
+                        <b>Date de naissance</b> : <span>{{ donationRequest.birthday |date('d M Y') }}</span>
+                    </div>
+                    <div class="col-md-12">
+                        <b>Numéro de téléphone</b> : <span>{{ donationRequest.phoneNumber }}</span>
+                    </div>
+                </div>
+                <div class="col-md-6" style="padding-left: 0">
+                    <img src="{{ asset('uploads/pictures/' ~ donationRequest.picture) }}" height="auto" width="50%" alt="Photo de {{ donationRequest.name }}" style="padding: 0 !important;">
+                </div>
+            </div>
+            <br><br>
+            <div class="row">
+                {% if donationRequest.picture is not null %}
+                <div class="col-md-12">
+                    <h3 class="text-center">Prestation choisie</h3>
+                </div>
+                <br><br><br>
+                <div class="col-md-6">
+                    <img src="{{ asset('uploads/pictures/' ~ donationRequest.doctor.picture) }}" height="auto" width="50%" alt="Photo de {{ donationRequest.doctor.username }}" style="padding: 0 !important;">
+                </div>
+                <div class="col-md-6">
+                    <div class="col-md-12">
+                        <b>Docteur</b> : <a href="{{ url('doctor_profile', {id: donationRequest.doctor.id}) }}"><span>{{ donationRequest.doctor.username }}</span></a>
+                    </div>
+                    <div class="col-md-12">
+                        <b>Prestation</b> : <span>{{ donationRequest.prestation.name }}</span>
+                    </div>
+                    <div class="col-md-12">
+                        <b>Prix</b> : <span>{{ donationRequest.prestation.price }} €</span>
+                    </div>
+                    <div class="col-md-12">
+                        <b>Description</b> : <span>{{ donationRequest.prestation.description }}</span>
+                    </div>
+                </div>
+                {% else %}
+                    <div class="col-md-12">
+                        <h3 class="text-center">Vous n'avez pas encore choisi de prestation !</h3>
+                    </div><br><br>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6 text-center">
+                        <a href="{{ url('demander_don_choisir_medecin', {idDonationRequest: donationRequest.id}) }}" class="btn btn-primary">Cliquez ici pour choisir la consultation voulue !</a>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
     {{ dump(donationRequest) }}
 
 {% endblock %}
