back office ~ok

--- a/templates/admin/country/index.html.twig
+++ b/templates/admin/country/index.html.twig
@@ -5,7 +5,7 @@
             Admin - Pays et villes
         {% endblock %}
         {% block bodyAdmin %}
-            <div class="container-fluid row p-2" style="background-color: #cddcdf; box-sizing: unset;">
+            <div class="container-fluid row p-2" style="background-color: #ffffff; box-sizing: unset;">
                 <div class="col-lg-1"></div>
                 <div class="col-lg-10 text-center"><br><br>
                     <a href="{{ url('admin_country_create') }}" class="genric-btn primary text-center">Ajouter un pays</a><br><br>
