--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -228,6 +228,8 @@
             <script src="{{'/build/js/jquery.validate.min.js'}}"></script>
             <script src="{{'/build/js/mail-script.js'}}"></script>
             <script src="{{'/build/js/main.js'}}"></script>
+            <script src="{{'/build/intlinput/js/intlTelInput.js'}}"></script>
+
 
 {#            <script#}
 {#                    src="https://code.jquery.com/jquery-3.4.1.min.js"#}
@@ -237,6 +239,9 @@
 {#                jQuery = $#}
 {#            </script>#}
 {#            <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>#}
+        {% endblock %}
+
+        {% block javascript2 %}
         {% endblock %}
     </body>
 </html>
