--- a/templates/admin/country/index.html.twig
+++ b/templates/admin/country/index.html.twig
@@ -21,7 +21,7 @@
                             <tr>
                                 <th scope="row">{{ country.id }}</th>
                                 <td><a class="text-white" href="{{ url('admin_country', {id: country.id}) }}">{{ country.name }}</a></td>
-                                <td><a href="{{ url('admin_country_delete', {id: country.id}) }}" class="text-danger"><i class="fas fa-trash-alt" title="Supprimer"></i></a></td>
+                                <td><a href="{{ url('admin_country_edit', {id: country.id}) }}" class="text-danger">Modifier</a></td>
                             </tr>
                         {% endfor %}
                         </tbody>
