--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -11,14 +11,15 @@
                         <div class="slider_text">
                             <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">   </h3>
                             <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">
-                                <a href="#" class="boxed-btn3">Trouver un médecin</a>
+{#                                <a href="#" class="boxed-btn3">Trouver un médecin</a>#}
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6">
                         <div class="payment_form white-bg wow fadeInDown" data-wow-duration="1.2s" data-wow-delay=".2s">
                             <div class="info text-center">
-                                <h4>Trouver <b>le médecin</b></h4>
+                                <h4>Rendez-vous médical pour les proches en Afrique</h4>
+{#                                <h4>Trouver <b>le médecin</b></h4>#}
                                 <p>En deux clics</p>
                             </div>
                             <div class="form">
