--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,7 +74,7 @@
 {#                                                <a href="#"> <i class="fa fa-phone"></i> +336 66 66 66 66</a>#}
 {#                                            </div>#}
                                             <div class="d-none d-lg-block">
-                                                <a class="boxed-btn4" href="{{ url('register_doctor') }}">Je suis médecin</a>
+                                                <a class="boxed-btn4" href="{{ url('register_doctor') }}">Inscription médecin</a>
                                             </div>
                                         </div>
                                     </div>
